[package]
name = "haskode-http-primary"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
axum = "0.7.5"
chrono = "0.4.38"
clap = "4.5.6"
dotenvy = "0.15.7"
env_logger = "0.11.3"
log = "0.4.21"
serde = { version = "1.0.203", features = ["derive"] }
sqlx = { version = "0.7.4", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"] }
tokio = { version = "1.38.0", features = ["macros", "rt-multi-thread", "signal"] }
tower-http = { version = "0.5.2", features = ["cors"] }
uuid = "1.8.0"
